    : 이메일의 자동수집을 막기위해 자바스크립트로 한글자씩 잘라 출력함
    : 권한없어도 관리 버튼 보이는 문제 해결 (태양이님 제안)
    : 스마트 에디터 사진 첨부시 확대기능 (테크니션님 제안)
    : 구글지도 동해표기 방법 적용 (정적인손님님 제안)
    : 모바일 분류탭 갯수 조정 (신비님 제안)
    : 선택삭제시 공지 풀리는 문제 해결 (세뇨르님 제안)
    : 삭제글 이동시 적립 포인트 삭제
    : 크롬 돋움폰트 강제적용 제거
    : 댓글 로그, 신고 버튼 글자 출력 반응형 수정
    : 구글+ 버튼 변경
    : 별점표시 document.ready 안하고 바로 출력
    : 날짜별 글작성 제한 관리자 제외
    : 하큐어 이모티콘 적용 (태양이님 제안)
    : 이모티콘 관리

    miwit/HISTORY
    miwit/mw.adm/mw.config.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/view.skin.php
    miwit/list.skin.php
    miwit/view.skin.php
    miwit/view_head.skin.php
    miwit/view_comment.skin.php
    miwit/write.skin.php
 
ver 2.9.9 (15.11.18)
    : 외부이미지 썸네일 생성 오류 수정 (금광님 제안)
    : 회신문자 하이픈과 관계없이 전송가능하게 (Lacooon님 제안)
    : 모바일 빌더 연동시 게시물 링크 교정 (edccesl님 제안)
    : 임시저장 기능 오류 수정 (태양이님 제안)
    : 컨텐츠샵 관리자 링크 수정 (티비플님 제안)
    : 선택삭제 오류 수정 (세뇨르님 제안)
    : 선택 비밀글 해제 오류 수정 (세뇨르님 제안)
    : 모바일 열람 비밀번호 오류 (업스톤님 제안)
    : 모바일 답글삭제 오류 (부멉님 제안)

    miwit/HISTORY
    miwit/mw.adm/mw.config.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.proc.sms.php
    miwit/mw.proc/mw.temp.php
    miwit/write.skin.php
    miwit/list.skin.php
    miwit/secret_all.php
 
ver 2.9.8 (15.11.08)
    : 반응형 지원!!
    : 갤러리형등 반응형 지원 (신비님 제안)
    : 요약형 디자인 개선 (신비님 제안) 
    : 링크에 이미지 경로 포함시 본문 표시 오류 수정 (신비님 제안)
    : 목록에서 선택 비밀글 설정 (의자왕님 제안)
    : 외부 이미지 썸네일 생성 후 글 수정시 이미지 경로 변경 체크 (도장관님 제안)
    : 나이제한 오류 수정 (정해국치님 제안)
    : 뷰페이지에 스킨설정 화면 링크 추가 (젬스박님 제안)
    : 뷰페이지에 보드설정 화면 링크 추가
    : font-awesome 4.4.0 업그레이드
    : 그누보드5 - 휴지통 사용시 최근게시물 cache 삭제
    : 그누보드5 - 워터마크 본문 표시 오류 수정 (잿빛푸우님 제안)
    : 그누보드5 모바일 경로 오류수정 (엑노님 제안)
    : 게시물 선택하지 않고 공지올림/내림 진행시 오류수정  (엑노님 제안) 
    : 댓글 관리자 자신의 글 추천 가능 (크레이티브님 제안)
    : 공지필수 데이터 filter 처리
    : 제목 word-break 적용
    : mysqli 지원
    : 모바일빌더 연동 개선

    miwit/HISTORY
    miwit/_common.php
    miwit/mw.adm/_common.php
    miwit/mw.adm/mw.config.php
    miwit/mw.lib/mw.function.lib.php